# Algorithmus_P_2pi-main

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
resources/: An algorithm with positive geometry using polynomials P(2π) for elementary particle physics.html
results/: Polynom_000_1.csv  Polynom_012_2.csv  Polynom_111_4.csv  Polynom_112_3.csv  Polynom_222_6.csv  Polynom_222_9.csv  Polynom_333_7.csv
src/: CONFIGURATION START.py
src/polynome2pi/: __main__.py  cli.py  constants.py  engine.py  initialize.py  main.py  utils.py
src/polynome2pi/output/: legend.py  plotting.py  report.py
