[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polynome2pi"
version = "0.1.0"
description = "Utilities for P(2π) polynomials / positive-geometry experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "HCSchmidt"}]

dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[project.scripts]
polynome2pi = "polynome2pi.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]